--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>图表生成</title>
+    <title>Echarts图表操练场</title>
   </head>
   <body>
     <div id="app"></div>
-    <!-- Note the reference to src here. Parcel will rewrite it on build. -->
     <script src="./main.js"></script>
   </body>
 </html>
