--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Echarts图表操练场</title>
+    <link rel="stylesheet" href="https://fonts.loli.net/css?family=Fira+Mono">
   </head>
   <body>
     <div id="app"></div>
